--- a/docs/Makefile
+++ b/docs/Makefile
@@ -61,9 +61,9 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/Chronograph.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/Chroniker.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/Chronograph.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/Chroniker.qhc"
 
 latex:
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
