--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,4 @@
 recursive-include chroniker/templates *
 recursive-include chroniker/static *
+include pip-requirements.txt
+include pip-requirements-test.txt
