Fixed tox harness. Fixed lock error with Python3.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
 recursive-include chroniker/templates *
 recursive-include chroniker/static *
+recursive-include chroniker/tests/fixtures *
+include pip-requirements-min-django.txt
 include pip-requirements.txt
 include pip-requirements-test.txt
