--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py2.7,py3.0,py3.4}-{django1.5,django1.6,django1.7,django1.8}
+envlist = py{27,30,34}-django{15,16,17,18}
 #envlist =
 #    py27-django15,
 #    py27-django16,
@@ -13,21 +13,26 @@ envlist = {py2.7,py3.0,py3.4}-{django1.5,django1.6,django1.7,django1.8}
 #    py34-django16,
 #    py34-django17,
 #    py34-django18
-
 recreate = True
 
 [testenv]
 basepython =
-    py2.7: python2.7
-    py3.0: python3.0
-    py3.4: python3.4
+    py27: python2.7
+    py30: python3
+    py34: python3.4
 deps =
-    django1.5: Django>=1.5,<1.6
-    django1.6: Django>=1.6,<1.7
-    django1.7: Django>=1.7,<1.8
-    django1.8: Django>=1.8,<1.9
-    
-#commands = {envbindir}/py.test -rxs -rf -rs --ff []
-commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase
-deps = -r{toxinidir}/pip-requirements.txt
-       -r{toxinidir}/pip-requirements-test.txt
+    -r{toxinidir}/pip-requirements.txt
+    -r{toxinidir}/pip-requirements-test.txt
+    django15: Django>=1.5,<1.6
+    django16: Django>=1.6,<1.7
+    django17: Django>=1.7,<1.8
+    django18: Django>=1.8,<1.9
+commands = django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME}
+
+# Django 1.5 uses a different test module lookup mechanism, so it needs a different command. 
+[testenv:py27-django15]
+commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME}
+[testenv:py30-django15]
+commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME}
+[testenv:py34-django15]
+commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME}
