Allowed setting a custom natural key for the job model. Defaults to name. Fixed bug in executing the raw_command.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,30,34}-django{15,16,17,18}
+envlist = py{27,30,34,35}-django{15,16,17,18,19}
 #envlist =
 #    py27-django15,
 #    py27-django16,
@@ -20,6 +20,7 @@ basepython =
     py27: python2.7
     py30: python3
     py34: python3.4
+    py35: python3.5
 deps =
     -r{toxinidir}/pip-requirements.txt
     -r{toxinidir}/pip-requirements-test.txt
@@ -27,6 +28,7 @@ deps =
     django16: Django>=1.6,<1.7
     django17: Django>=1.7,<1.8
     django18: Django>=1.8,<1.9
+    django19: Django>=1.9,<2.0
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME}
 
 # Django 1.5 uses a different test module lookup mechanism, so it needs a different command. 
