Added travis-ci config.

--- a/tox.ini
+++ b/tox.ini
@@ -29,12 +29,12 @@ deps =
     django17: Django>=1.7,<1.8
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<2.0
-commands = django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME}
+commands = django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME:}
 
 # Django 1.5 uses a different test module lookup mechanism, so it needs a different command. 
 [testenv:py27-django15]
-commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME}
+commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
 [testenv:py30-django15]
-commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME}
+commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
 [testenv:py34-django15]
-commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME}
+commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
