--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,5 @@
 language: python
-python:
-  - "2.6"
-  - "2.7"
-  - "3.3"
-  - "3.4"
-sudo: true
-
-#before_install: "sudo apt-get install python-dev libevent-dev"
-
-# command to install dependencies
-install: "pip install -r pip-requirements.txt; pip install -r pip-requirements-test.txt; pip install -r pip-requirements-min-django.txt"
-
-# command to run tests
-script: django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase
+install:
+-   pip install tox
+script:
+-   tox
