--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = py{27,30,34,35}-django{15,16,17,18,19}
+#envlist = py{27,30,34,35}-django{15,16,17,18,19}
+envlist = py{27,30,34}-django{15,16,17},py{27,30,34,35}-django{18,19}
 #envlist =
 #    py27-django15,
 #    py27-django16,
