Added fix to support older Django versions on Python3+.

--- a/tox.ini
+++ b/tox.ini
@@ -39,3 +39,5 @@ commands = django-admin.py test --traceback --settings=chroniker.tests.settings 
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
 [testenv:py34-django15]
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
+[testenv:py35-django15]
+commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
