Removed 3.2 test support.

--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,11 @@
 [tox]
-#envlist = py{27,30,34,35}-django{15,16,17,18,19}
-envlist = py{27,30,34}-django{15,16,17},py{27,30,34,35}-django{18,19}
-#envlist =
-#    py27-django15,
-#    py27-django16,
-#    py27-django17,
-#    py27-django18
-#    py30-django15,
-#    py30-django16,
-#    py30-django17,
-#    py30-django18,
-#    py34-django15,
-#    py34-django16,
-#    py34-django17,
-#    py34-django18
+envlist = py{27,33,34,35}-django{15,16,17,18,19}
 recreate = True
 
 [testenv]
 basepython =
     py27: python2.7
-    py30: python3
+    py33: python3.3
     py34: python3.4
     py35: python3.5
 deps =
@@ -35,7 +21,7 @@ commands = django-admin.py test --traceback --settings=chroniker.tests.settings 
 # Django 1.5 uses a different test module lookup mechanism, so it needs a different command. 
 [testenv:py27-django15]
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
-[testenv:py30-django15]
+[testenv:py33-django15]
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
 [testenv:py34-django15]
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
