Removed unsupported Travis Python configurations.

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ recreate = True
 [testenv]
 basepython =
     py27: python2.7
-    py33: python3.3
+#    py33: python3.3
     py34: python3.4
     py35: python3.5
 deps =
