--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,13 @@
 [tox]
-envlist = py{27,34,35}-django{15,16,17,18,19}
+#https://pypi.python.org/pypi/Django/1.5
+#https://pypi.python.org/pypi/Django/1.6
+#https://pypi.python.org/pypi/Django/1.7
+#https://pypi.python.org/pypi/Django/1.8
+#https://pypi.python.org/pypi/Django/1.9
+#https://pypi.python.org/pypi/Django/1.10
+# Note, several versions support Python 3.2, but Pip has dropped support, so we can't test them.
+# See https://github.com/travis-ci/travis-ci/issues/5485
+envlist = py{27,33}-django{15,16},py{27,33,34}-django{17,18},py{27,34,35}-django{19},py{27,34,35}-django{110}
 recreate = True
 
 [testenv]
