Added py33 tests. Added Django 1.10 support.

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,8 @@ recreate = True
 [testenv]
 basepython =
     py27: python2.7
-#    py33: python3.3
+    py32: python3.2
+    py33: python3.3
     py34: python3.4
     py35: python3.5
 deps =
@@ -24,10 +25,13 @@ deps =
     django17: Django>=1.7,<1.8
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
+    django110: Django>=1.10,<2
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME:}
 
 # Django 1.5 uses a different test module lookup mechanism, so it needs a different command. 
 [testenv:py27-django15]
+commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
+[testenv:py33-django15]
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
 [testenv:py34-django15]
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
