--- a/tox.ini
+++ b/tox.ini
@@ -18,8 +18,8 @@ basepython =
     py34: python3.4
     py35: python3.5
 deps =
-    -r{toxinidir}/pip-requirements.txt
-    -r{toxinidir}/pip-requirements-test.txt
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements-test.txt
     django15: Django>=1.5,<1.6
     django16: Django>=1.6,<1.7
     django17: Django>=1.7,<1.8
