--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
 -   "3.5"
 install:
--   pip install tox pylint
+-   pip install -r requirements-test.txt
 script:
 -   ./pep8.sh
 -   tox
