--- a/pylint.rc
+++ b/pylint.rc
@@ -87,7 +87,6 @@ disable-msg-cat=I
 # E1002: Use of super on an old style class
 # E1120: No value for argument
 # R0901: Too many ancestors
-# W0611: Unused import
 # E1123: Unexpected keyword argument %r in %s call
 # C0302: *Too many lines in module (%s)*
 # R0801: *Similar lines in %s files*
@@ -105,7 +104,7 @@ disable-msg-cat=I
 # R0101: *Too many nested blocks (%s/%s)*
 # I0011: *Locally disabling %s (%s)*
 # W1001: *Use of "property" on an old style class*
-disable=C1001,C0103,R0201,W0212,W0614,W0401,W0704,E1101,W0142,R0904,R0913,W0404,R0903,W0232,C0111,W0613,W0612,W0511,W0104,R0902,R0921,R0401,E1103,C0303,W0311,C0330,F0401,E1002,E1120,R0901,W0611,E1123,C0302,R0801,R0914,R0912,R0915,W0703,E1003,E0202,W0201,W0221,C0325,R0916,R0204,R0101,I0011,W1001
+disable=C1001,C0103,R0201,W0212,W0614,W0401,W0704,E1101,W0142,R0904,R0913,W0404,R0903,W0232,C0111,W0613,W0612,W0511,W0104,R0902,R0921,R0401,E1103,C0303,W0311,C0330,F0401,E1002,E1120,R0901,E1123,C0302,R0801,R0914,R0912,R0915,W0703,E1003,E0202,W0201,W0221,C0325,R0916,R0204,R0101,I0011,W1001
 
 [REPORTS]
 
@@ -337,7 +336,7 @@ ignore-docstrings=yes
 [FORMAT]
 
 # Maximum number of characters on a single line.
-max-line-length=100
+max-line-length=160
 
 # Maximum number of lines in a module
 max-module-lines=1000
