--- a/pylint.rc
+++ b/pylint.rc
@@ -60,7 +60,6 @@ disable-msg-cat=I
 # C1001: old-style class defined (Django uses these for Meta options)
 # C0103: variable regex check.
 # C0111: missing docstring check. It's too vague. Complains about no docstrings in __init__ and other places we don't care about.
-# C0303: Trailing whitespace.
 # C0330: bad-continuation
 # E1101: member check...this is usually wrong.
 # E1103: type inference...this is usually wrong.
@@ -104,7 +103,7 @@ disable-msg-cat=I
 # R0101: *Too many nested blocks (%s/%s)*
 # I0011: *Locally disabling %s (%s)*
 # W1001: *Use of "property" on an old style class*
-disable=C1001,C0103,R0201,W0212,W0614,W0401,W0704,E1101,W0142,R0904,R0913,W0404,R0903,W0232,C0111,W0613,W0612,W0511,W0104,R0902,R0921,R0401,E1103,C0303,W0311,C0330,F0401,E1002,E1120,R0901,E1123,C0302,R0801,R0914,R0912,R0915,W0703,E1003,E0202,W0201,W0221,C0325,R0916,R0204,R0101,I0011,W1001
+disable=C1001,C0103,R0201,W0212,W0614,W0401,W0704,E1101,W0142,R0904,R0913,W0404,R0903,W0232,C0111,W0613,W0612,W0511,W0104,R0902,R0921,R0401,E1103,W0311,C0330,F0401,E1002,E1120,R0901,E1123,C0302,R0801,R0914,R0912,R0915,W0703,E1003,E0202,W0201,W0221,C0325,R0916,R0204,R0101,I0011,W1001
 
 [REPORTS]
 
@@ -121,7 +120,7 @@ include-ids=yes
 files-output=no
 
 # Tells whether to display a full report or only the messages
-reports=yes
+reports=no
 
 # Python expression which should return a note less than 10 (10 is the highest
 # note). You have access to the variables errors warning, statement which
