--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install:
 -   sudo add-apt-repository -y ppa:fkrull/deadsnakes
 -   sudo apt-get -yq update
--   sudo apt-get -yq install python3.6
+-   sudo apt-get -yq install python3.6 python3.6-dev
 -   pip install -r requirements-test.txt
 script:
 -   ./pep8.sh
