--- a/tox.ini
+++ b/tox.ini
@@ -7,38 +7,22 @@
 #https://pypi.python.org/pypi/Django/1.10
 # Note, several versions support Python 3.2, but Pip has dropped support, so we can't test them.
 # See https://github.com/travis-ci/travis-ci/issues/5485
-envlist = py{27,33}-django{15,16},py{27,33,34}-django{17,18},py{27,34,35}-django{19},py{27,34,35}-django{110},py{27,34,35,36}-django{111}
+envlist = py{27,34,35}-django{19},py{27,34,35}-django{110},py{27,34,35,36}-django{111}
 recreate = True
 
 [testenv]
 basepython =
     py27: python2.7
-    py32: python3.2
-    py33: python3.3
     py34: python3.4
     py35: python3.5
     py36: python3.6
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements-test.txt
-    django15: Django>=1.5,<1.6
-    django16: Django>=1.6,<1.7
-    django17: Django>=1.7,<1.8
-    django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<2
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME:}
-
-# Django 1.5 uses a different test module lookup mechanism, so it needs a different command. 
-[testenv:py27-django15]
-commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
-[testenv:py33-django15]
-commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
-[testenv:py34-django15]
-commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
-[testenv:py35-django15]
-commands = django-admin.py test --traceback --settings=chroniker.tests.settings tests.JobTestCase{env:TESTNAME:}
 
 # TODO: fix, PID times-out in Travis-CI?
 [testenv:py34-django19]
