--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: python
 python:
 -   "3.5"
 install:
--   sudo add-apt-repository -y ppa:fkrull/deadsnakes
+-   sudo add-apt-repository -y ppa:deadsnakes/ppa
 -   sudo apt-get -yq update
 -   sudo apt-get -yq install python3.6 python3.6-dev
 -   pip install -r requirements-test.txt
