--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@
 #https://pypi.python.org/pypi/Django/1.8
 #https://pypi.python.org/pypi/Django/1.9
 #https://pypi.python.org/pypi/Django/1.10
+#https://pypi.python.org/pypi/Django/2.0
 # Note, several versions support Python 3.2, but Pip has dropped support, so we can't test them.
 # See https://github.com/travis-ci/travis-ci/issues/5485
 envlist = py{27,34,35}-django{19},py{27,34,35}-django{110},py{27,34,35,36}-django{111}
@@ -22,8 +23,9 @@ deps =
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<2
+    django20: Django>=2.0.0
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME:}
 
 # TODO: fix, PID times-out in Travis-CI?
-[testenv:py34-django19]
+[testenv:py35-django20]
 commands = python --version
