Added Django 2 support.

--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,14 @@
 [tox]
-#https://pypi.python.org/pypi/Django/1.5
-#https://pypi.python.org/pypi/Django/1.6
-#https://pypi.python.org/pypi/Django/1.7
-#https://pypi.python.org/pypi/Django/1.8
-#https://pypi.python.org/pypi/Django/1.9
-#https://pypi.python.org/pypi/Django/1.10
+# https://pypi.python.org/pypi/Django/1.9
+# https://pypi.python.org/pypi/Django/1.10
 # Note, several versions support Python 3.2, but Pip has dropped support, so we can't test them.
 # See https://github.com/travis-ci/travis-ci/issues/5485
-envlist = py{27,34,35}-django{19},py{27,34,35}-django{110},py{27,34,35,36}-django{111}
+envlist = py{27,35}-django{19},py{27,35}-django{110},py{27,35,36}-django{111},py{35,36}-django{200}
 recreate = True
 
 [testenv]
 basepython =
     py27: python2.7
-    py34: python3.4
     py35: python3.5
     py36: python3.6
 deps =
@@ -22,8 +17,5 @@ deps =
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<2
+    django200: Django>=2.1.7,<3
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME:}
-
-# TODO: fix, PID times-out in Travis-CI?
-[testenv:py34-django19]
-commands = python --version
