Add explicit tests to Django 2.0 and 2.1

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 # https://pypi.python.org/pypi/Django/1.10
 # Note, several versions support Python 3.2, but Pip has dropped support, so we can't test them.
 # See https://github.com/travis-ci/travis-ci/issues/5485
-envlist = py{27,35}-django{19},py{27,35}-django{110},py{27,35,36}-django{111},py{35,36}-django{200}
+envlist = py{27,35}-django{19},py{27,35}-django{110},py{27,35,36}-django{111},py{35,36}-django{20},py{35,36}-django{21}
 recreate = True
 
 [testenv]
@@ -17,5 +17,6 @@ deps =
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<2
-    django200: Django>=2.1.7,<3
+    django20: Django>=2.0,<2.1
+    django21: Django>=2.1,<2.2
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME:}
