Extended test to check log change page.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36}-django{111},py{36}-django{20},py{36,37}-django{21},py{36,37}-django{30}
+envlist = py{36}-django{20},py{36,37}-django{21},py{36,37}-django{30}
 recreate = True
 
 [testenv]
@@ -9,7 +9,6 @@ basepython =
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements-test.txt
-    django111: Django>=1.11,<2
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
     django30: Django>=3.0,<3.1
