--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,4 @@ deps =
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
     django30: Django>=3.0,<3.1
-commands =
-    python chroniker/tests/manage.py smoke_tests --settings=chroniker.tests.settings
-    django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME:}
+commands = django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME:}
