--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 recursive-include chroniker/templates *
 recursive-include chroniker/static *
 recursive-include chroniker/tests/fixtures *
+include chroniker/static/refresh.svg
 include requirements-min-django.txt
 include requirements.txt
 include requirements-test.txt
