--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
-envlist = py{36,37}-django{21},py{36,37}-django{30}
+envlist = py{38}-django{30}
 recreate = True
 
 [testenv]
 basepython =
-    py36: python3.6
-    py37: python3.7
+    py38: python3.8
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements-test.txt
