--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -3,8 +3,8 @@ name: Django CI
 on:
   push:
     branches: [ "**" ]
-  pull_request:
-    branches: [ "**" ]
+#  pull_request:
+#    branches: [ "**" ]
 
 jobs:
   test:
