--- a/pylint.rc
+++ b/pylint.rc
@@ -22,7 +22,7 @@ load-plugins=
 
 [MESSAGES CONTROL]
 
-disable=C0103,W0212,W0614,W0401,E1101,R0904,R0913,W0404,R0903,C0111,W0613,W0612,W0511,W0104,R0902,R0401,E1103,W0311,F0401,E1120,R0901,E1123,C0302,R0801,R0914,R0912,R0915,W0703,E1003,E0202,W0201,W0221,C0325,R0916,R0101,I0011,consider-using-ternary,unsubscriptable-object,inconsistent-return-statements,keyword-arg-before-vararg,wrong-import-order,use-dict-literal,consider-using-f-string,consider-using-with,unsupported-binary-operation,broad-exception-raised,unnecessary-lambda-assignment
+disable=C0103,W0212,W0614,W0401,E1101,R0904,R0913,W0404,R0903,C0111,W0613,W0612,W0511,W0104,R0902,R0401,E1103,W0311,F0401,E1120,R0901,E1123,C0302,R0801,R0914,R0912,R0915,W0703,E1003,E0202,W0201,W0221,C0325,R0916,R0101,I0011,consider-using-ternary,unsubscriptable-object,inconsistent-return-statements,keyword-arg-before-vararg,wrong-import-order,use-dict-literal,consider-using-f-string,consider-using-with,unsupported-binary-operation,broad-exception-raised,unnecessary-lambda-assignment,no-name-in-module
 
 [REPORTS]
 
