Added Django 4.2 to test matrix.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{38}-django{30}
+envlist = py{38}-django{30,42}
 recreate = True
 
 [testenv]
@@ -9,4 +9,5 @@ deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements-test.txt
     django30: Django>=3.0,<3.1
+    django42: Django>=4.2,<4.3
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME:}
