Updated tox config

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ basepython =
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements-test.txt
-    django30: Django>=3.2,<3.3
-    django42: Django>=4.2,<4.3
+    django32: Django>=3.2,<3.3
+    django42: Django>=4.2,<5.0
+    -e .  # Install the current package in editable mode
 commands = django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME:}
