Fixed tox command

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{38}-django{32,42}
+envlist = py{38}-django{42}
 recreate = True
 
 [testenv]
@@ -11,4 +11,4 @@ deps =
     django32: Django>=3.2,<3.3
     django42: Django>=4.2,<5.0
     -e .  # Install the current package in editable mode
-commands = django-admin.py test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME:}
+commands = django-admin test --traceback --settings=chroniker.tests.settings chroniker.tests.tests.JobTestCase{env:TESTNAME:}
